# IPsolver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Rakefile
cmake/: IPsolverCatch2.cmake  IPsolverConfig.cmake.in  IPsolverEigen3.cmake  IPsolverGTest.cmake  IPsolverVersion.cmake
docs/: _finite_differences_8hh.html  _finite_differences_8hh.js  _finite_differences_8hh__dep__incl.map  _finite_differences_8hh__dep__incl.md5  _finite_differences_8hh__incl.map  _finite_differences_8hh__incl.md5  _finite_differences_8hh_source.html  _i_psolver_8hh.html  _i_psolver_8hh.js  _i_psolver_8hh__incl.map  _i_psolver_8hh__incl.md5  _i_psolver_8hh_source.html  _mainpage_8md.html  _problem_8hh.html  _problem_8hh.js  _problem_8hh__dep__incl.map  _problem_8hh__dep__incl.md5  _problem_8hh__incl.map  _problem_8hh__incl.md5  _problem_8hh_source.html  _solver_8hh.html  _solver_8hh.js  _solver_8hh__dep__incl.map  _solver_8hh__dep__incl.md5  _solver_8hh__incl.map  _solver_8hh__incl.md5  _solver_8hh_source.html  annotated.html  annotated_dup.js  class_i_psolver_1_1_finite_differences_1_1_epsilon-members.html  class_i_psolver_1_1_finite_differences_1_1_epsilon.html  class_i_psolver_1_1_finite_differences_1_1_epsilon.js  class_i_psolver_1_1_problem-members.html  class_i_psolver_1_1_problem.html  class_i_psolver_1_1_problem.js  class_i_psolver_1_1_problem_wrapper-members.html  class_i_psolver_1_1_problem_wrapper.html  class_i_psolver_1_1_problem_wrapper.js  class_i_psolver_1_1_solver-members.html  class_i_psolver_1_1_solver.html  (+45 more)
docs/include/doxygen-custom/: header.html
docs/markdown/: Mainpage.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  namespaces_0.js  (+14 more)
include/: IPsolver.hh
include/IPsolver/: FiniteDifferences.hh  Problem.hh  Solver.hh
tests/: CMakeLists.txt  test_linear.cc  test_logistic.cc  test_qprog.cc  test_quadratic.cc  test_quadratic_fd.cc  test_small_example.cc
